# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1003 2012/04/05 23:25:02 zmedico Exp $

*portage-2.2.0_alpha100 (05 Apr 2012)

  05 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha100.ebuild:
  2.2.0_alpha100 version bump. This includes all of the fixes in
  portage-2.1.10.56. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.56 (05 Apr 2012)

  05 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.56.ebuild:
  2.1.10.56 version bump. This fixes bug #386901 (emerge progress counter for
  --unmerge), bug #410687 (selinux sandbox violation for
  /sys/fs/selinux/context), and bug #410801 (emerge hang after merge list
  display triggered by slot conflict). Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

  04 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.44.ebuild,
  -portage-2.1.10.52.ebuild, -portage-2.2.0_alpha96.ebuild:
  Remove old versions.

*portage-2.2.0_alpha99 (03 Apr 2012)

  03 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha99.ebuild,
  -portage-2.2.0_alpha98.ebuild:
  2.2.0_alpha99 version bump. This includes all of the fixes in
  portage-2.1.10.55. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.55 (03 Apr 2012)

  03 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.55.ebuild,
  -portage-2.1.10.54.ebuild:
  2.1.10.55 version bump. This fixes bug #410625 (erroneous 'bad substitution'
  errors for profile.env). Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

*portage-2.2.0_alpha98 (01 Apr 2012)

  01 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha98.ebuild,
  -portage-2.2.0_alpha97.ebuild:
  2.2.0_alpha98 version bump. This includes all of the fixes in
  portage-2.1.10.54. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.54 (01 Apr 2012)
