@@ -3,11 +3,9 @@ DIST portage-2.2.0_alpha100.patch.bz2 25570 RMD160 db2ba89284eb3fe7e9264071be9cf
 DIST portage-2.2.0_alpha88.tar.bz2 803852 RMD160 9c6a87c2a8de996286e74245faeaacf89fab0aea SHA1 d2f698470f0df250f51f937d78ea484d27ad0068 SHA256 75b74a87c4f4b1a13857f62aeb42522b491b06b66fe686ef4036993f55125130
 DIST portage-2.2.0_alpha89.patch.bz2 4205 RMD160 ff17958771ee571ccc45604682882356d2d54e5e SHA1 bf5ed24e13f89bcad128e8773f40ceea8bbd8ed2 SHA256 677bc5cce25723cefbdb8f147ac6fc7162d541eb0a149fbd1b96d79f4b2a07d1
 DIST portage-2.2.0_alpha94.tar.bz2 813945 RMD160 1abe94ff71b33255f260458d1b57a00755ba375b SHA1 5a7affd3e97bf8692a6b33ef55268b2d708bd1b8 SHA256 2b559d5596ad748be4587802012d1dfd817a1b7b40242be1f0145bb0e39a6b35
-DIST portage-2.2.0_alpha99.patch.bz2 22832 RMD160 6149168d4200550f6de4c4708b382e4abb17445a SHA1 058b8e59db0302446b0eeffa9fe72af9f9d6bd9b SHA256 043c2202049875a4021a133b6095355ca5f1041860cb579ca4d2df63d3bf6e4d
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
 EBUILD portage-2.2.0_alpha100.ebuild 12435 RMD160 726a26adc44eb51ad4277a894f3545b7a3cc24bc SHA1 3d481e9aed0953a2741e5ee5543b5ad927926007 SHA256 e01fe2eea43c154983b66953283c487d8518f0a7eb80344e75dfe7464b642dc3
 EBUILD portage-2.2.0_alpha89.ebuild 15740 RMD160 488c3ae4e6afb1fc1c03fe746466e0fbdb4f0770 SHA1 1ccc3403ec313a21a0016f79b2c11eca5f7235d6 SHA256 c0b562a3f7b52f202e4c0e7b814ad3de869c22a3e9e7429d7858909e136baf08
-EBUILD portage-2.2.0_alpha99.ebuild 12434 RMD160 7b27394b89ecd6e2f1143849528de037fbebb0e1 SHA1 45b521b0bba3a61651b03519d572e054ef0a040c SHA256 e1b92fd8753e2bf81ac17204b9505a64f44b216fc9c59c6092e357fad9186589
 EBUILD portage-9999.ebuild 11690 RMD160 1517b88b0b63b3b3d7cf12760ab701ae3a7f818a SHA1 6f330e055d9b683a7b99b34fb7ae5bad0d3fba04 SHA256 ed98f4911486a8738f175865d6f8e30091cd2c5bb2a5438dfa31b58abd0cafcb
-MISC ChangeLog 89143 RMD160 84019242c7136f79c40833b8d42cc1ae251e28cd SHA1 ab1e0f4c50ee31481a51dbf3770a382aeba65aeb SHA256 fee6c3573b5cba4af5c2a2146d5140af05ee2b4f276434e24d30c944ba41f61a
+MISC ChangeLog 89274 RMD160 e7b76f0af6038da5279fd417b4d92139ad8bcdf6 SHA1 c84fe92bc9f08f5edb4c49b08de283c3e02bd1a7 SHA256 ae84363f9d20bcfe9854dd84c2d2a2f7976e4f42bbc518e93ad72b0b88f6739c
 MISC metadata.xml 926 RMD160 9fd2d499d8102a870e45e63ec68400d71de950c6 SHA1 83f8455f45d0baaedcbbd3fc0186cccad54af7b9 SHA256 2609962ab6a20df40f95053513e6aca76b24caee81e7b3f45de7e3c7e33eec25
