@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1003 2012/04/05 23:25:02 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1004 2012/04/07 21:50:54 zmedico Exp $
+
+  07 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.55.ebuild,
+  -portage-2.2.0_alpha99.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha100 (05 Apr 2012)
 
